--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8"> 
         <title>Trabajo restaurante italiano</title>
+        <link rel="stylesheet" href="css/estilos.css" type="text/css">
     </head>
     <body>
-        
+        <h1>titulo de prueba</h1>
     </body>
 </html>
