--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <link rel="stylesheet" href="css/estilos.css" type="text/css">
     </head>
     <body>
-        <h1>titulo de prueba</h1>
+        <div id="b1">
+          
+
+        </div>
     </body>
 </html>
