--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8"> 
-        <title>Trabajo restaurante italiano</title>
-        <link rel="stylesheet" href="css/estilos.css" type="text/css">
-    </head>
-    <body>
-        <div id="b1">
-          
 
+<head>
+    <meta charset="utf-8">
+    <title>Trabajo restaurante italiano</title>
+    <link rel="stylesheet" href="css/estilos.css" type="text/css">
+</head>
+
+<body>
+    <div>
+        <div id="contenedor">
+            <header id="presentacion">
+                <div id="divlogo" class="contenido">
+                    <img src="recursos/imagenes/logo-tatin.png" alt="Logo" width="100px">
+                    <div id="text1">
+                       <p id="txtpromo">
+                            PROMOCIÓN  <BR>
+                            EN PEDIDOS A RECOGER: <br>
+                            POR CADA DOS PIZZAS, LLÉVATE OTRA DE REGALO <br>
+                            O UNA BOTELLA DE LAMBRUSCO
+                       </p>
+                    </div>
+                </div>
         </div>
-    </body>
+
+    </div>
+</body>
+
 </html>
