Hecho primer div

--- a/index.html
+++ b/index.html
@@ -10,18 +10,25 @@
 <body>
     <div>
         <div id="contenedor">
-            <header id="presentacion">
-                <div id="divlogo" class="contenido">
+            <header>
+                <div id="divlogo" >
                     <img src="recursos/imagenes/logo-tatin.png" alt="Logo" width="100px">
-                    <div id="text1">
-                       <p id="txtpromo">
-                            PROMOCIÓN  <BR>
-                            EN PEDIDOS A RECOGER: <br>
-                            POR CADA DOS PIZZAS, LLÉVATE OTRA DE REGALO <br>
-                            O UNA BOTELLA DE LAMBRUSCO
-                       </p>
-                    </div>
                 </div>
+            </header>
+            <div id="text1">
+                <p>
+                    <h5>
+                     PROMOCIÓN <BR>
+                     EN PEDIDOS A RECOGER: <br>
+                    </h5>
+                </p>
+                <p>
+                    <h4>
+                     POR CADA DOS PIZZAS, LLÉVATE OTRA DE REGALO <br>
+                     O UNA BOTELLA DE LAMBRUSCO
+                    </h4>
+                </p>
+             </div>
         </div>
 
     </div>
