--- a/index.html
+++ b/index.html
@@ -9,26 +9,42 @@
 
 <body>
     <div>
-        <div id="contenedor">
+        <div id="contenedor1">
             <header>
                 <div id="divlogo" >
                     <img src="recursos/imagenes/logo-tatin.png" alt="Logo" width="100px">
                 </div>
             </header>
             <div id="text1">
-                <p>
-                    <h5>
+                <p id="p1">
+                    <h4>
                      PROMOCIÓN <BR>
                      EN PEDIDOS A RECOGER: <br>
                     </h5>
                 </p>
                 <p>
-                    <h4>
+                    <h2>
                      POR CADA DOS PIZZAS, LLÉVATE OTRA DE REGALO <br>
                      O UNA BOTELLA DE LAMBRUSCO
-                    </h4>
+                    </h2>
                 </p>
              </div>
+        </div>
+
+        <div id="contenedor2">
+            <header>
+                <h5 id="posCen" class="letraVerde">Ven a probar la mejor pasta de Valladolid</h5>
+            </header>
+            <h3 id="posIzqA" class="letraVerde">EL RESTAURANTE</h3> 
+            <div id="fotosArriba">
+                 <img id="margen1" src="recursos/imagenes/tatin-01.jpg" alt="Primera foto" width="400px">
+                <img  src="recursos/imagenes/tatin-02.jpg" alt="Segunda foto" width="400px">
+                <br>
+            <div id="fotosAbajo">
+                <img id="margen2" src="recursos/imagenes/tatin-03.jpg" alt="Tercera foto" width="300">
+                <img src="recursos/imagenes/tatin-04.jpg" alt="Cuarta foto" width="300">
+            </div>
+            </div>
         </div>
 
     </div>
