--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 
 <body>
     <div>
-        <div id="contenedor1"> <!--Parte de arriba-->
+        <div id="contenedor1">
+            <!--Parte de arriba-->
             <header>
                 <div id="divlogo">
                     <img src="recursos/imagenes/logo-tatin.png" alt="Logo" width="100px">
                 </div>
             </header>
             <div id="text1">
-                <p id="p1">
+                <p>
                     <h4>
-                        PROMOCIÓN <BR>
+                        PROMOCIÓN <br>
                         EN PEDIDOS A RECOGER: <br>
-                        </h5>
+                    </h4>
                 </p>
                 <p>
                     <h2>
@@ -31,7 +32,8 @@
             </div>
         </div>
 
-        <div id="contenedor2"> <!--Parte del medio-->
+        <div id="contenedor2">
+            <!--Parte del medio-->
             <header>
                 <h5 id="posCen" class="letraVerde">Ven a probar la mejor pasta de Valladolid</h5>
             </header>
@@ -46,10 +48,20 @@
                 </div>
             </div>
         </div>
-<br>
-        <div id="contenedor3"> <!--Parte de abajo-->
-            
+        <br>
 
+        <div id="contenedor3">
+            <div>
+                <p id="text2">
+                    <h3>"No existe plato desdeñado en la cocina cuando se realiza de manera auténtica</h3>
+                </p>
+                <p id="foot">
+                    <figure>
+                        <img src="recursos/imagenes/miguel-de-cervantes.jpg" alt="">
+                    </figure>
+                    <h5 id="footerh5">MIGUEL DE CERVANTES</h5>
+                </p>
+            </div>
         </div>
 
     </div>
